调整打包逻辑

--- a/src/includes/head.pug
+++ b/src/includes/head.pug
@@ -5,6 +5,6 @@ meta(name='apple-mobile-web-app-capable', content='yes')
 meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover')
 meta(name='description', content='前端开发工作流之h5页面开发')
 meta(name='keywords', content='前端开发工作流之h5页面开发')
-link(rel='stylesheet', href='@static/common/css/bootstrap.min.css')
-link(rel='stylesheet', href='@static/common/css/reset.css')
-link(rel='stylesheet', href='@static/common/css/common.css')
+link(rel='stylesheet', href='@assets/common/css/bootstrap.min.css')
+link(rel='stylesheet', href='@assets/common/css/reset.css')
+link(rel='stylesheet', href='@assets/common/css/common.css')
