--- a/src/page/home/index.pug
+++ b/src/page/home/index.pug
@@ -2,11 +2,11 @@ doctype html
 html
   head
     include ../../includes/head
-    link(rel='stylesheet', href='@static/home/css/index.css')
-    script(src='@static/common/js/flexible.min.js')
+    link(rel='stylesheet', href='@assets/home/css/index.css')
+    script(src='@assets/common/js/flexible.min.js')
   body
     .app
       p 测试
 
     include ../../includes/foot
-    script(src='@static/home/js/index.js')
+    script(src='@assets/home/js/index.js')
