--- a/src/includes/foot.pug
+++ b/src/includes/foot.pug
@@ -1,3 +1,3 @@
-script(src='@static/common/js/jquery-3.3.1.min.js')
-script(src='@static/common/js/bootstrap.min.js')
-script(src='@static/common/js/common.js')
+script(src='@assets/common/js/jquery-3.3.1.min.js')
+script(src='@assets/common/js/bootstrap.min.js')
+script(src='@assets/common/js/common.js')
