--- a/src/layouts/hd.pug
+++ b/src/layouts/hd.pug
@@ -13,15 +13,15 @@ html(lang="en")
     meta(name='keywords', content='前端开发工作流之h5页面开发')
     block meta
 
-    link(rel='stylesheet', href='@static/common/css/reset.css')
-    link(rel='stylesheet', href='@static/common/css/common.css')
+    link(rel='stylesheet', href='@assets/common/css/reset.css')
+    link(rel='stylesheet', href='@assets/common/css/common.css')
     block css
 
     //- 阿里的可伸缩布局方案 flexible.js
-    script(src='@static/common/js/flexible.min.js')
+    script(src='@assets/common/js/flexible.min.js')
   body(ontouchstart)
     block content
     //- 公用页面底部元素
-    script(src='@static/common/js/jquery-3.3.1.min.js')
-    script(src='@static/common/js/common.js')
+    script(src='@assets/common/js/jquery-3.3.1.min.js')
+    script(src='@assets/common/js/common.js')
     block js
